--- a/assignments/assignment1/tex/writeup.tex
+++ b/assignments/assignment1/tex/writeup.tex
@@ -69,6 +69,7 @@
 
 \begin{document}
 \maketitle
+The code for questions 1-3 can be found in the directory \texttt{single}, whereas the code for section 4 can be found in the directory \texttt{double}.  
         \section{CPU Calculation}%
         Please see \texttt{cpu\_funcs.cu} for implementation. \texttt{./matrix} accepts parameters:
         \begin{itemize}
@@ -90,31 +91,31 @@
  \hline
  Block size & n,m = 1000 & n,m = 5000 & n,m = 10000 & n,m = 25000 \\ [0.5ex] 
  \hline
- 4 & 291 & 4826 & 20144 & 120456 \\
+ 4 & 291 & 968 & 2023 & 4847 \\
  \hline
- 8 & 294 & 5040 & 19297 & 125733 \\
+ 8 & 339 & 972 & 2024 & 4650 \\
  \hline
- 16 & 339 & 4830 & 19308 & 120458 \\
+ 16 & 291 & 970 & 1937 & 5058 \\
  \hline
- 32 & 316 & 4839 & 19296 & 115626 \\
+ 32 & 316 & 1011 & 2023 & 4851 \\
  \hline
- 64 & 327 & 4831 & 20141 & 120557 \\
+ 64 & 315 & 969 & 2023 & 5056 \\
  \hline
- 128 & 342 & 4835 & 19303 & 120450 \\
+ 128 & 291 & 973 & 2023 & 5061 \\
  \hline
- 256 & 274 & 4824 & 20167 & 120445 \\
+ 256 & 299 & 1013 & 2114 & 4848 \\
  \hline
- 512 & 274 & 4838 & 19309 & 115690 \\
+ 512 & 274 & 1057 & 1942 & 4845 \\
  \hline
- 1024 & 274 & 5042 & 19322 & 120480 \\
+ 1024 & 274 & 1015 & 1939 & 4846 \\
  \hline
 
  \hline
 \end{tabular}
 \end{center}
-We are clearly getting a massive speedup over the CPU when doing this kind of operation. The CPU is already quite good at doing rowsums in C due to contiguous data access (since C is row-major), however the incredible parallelism given by CUDA cannot be beaten. As is to be expected, the speedup increases as $m,n \to 25000$, since the proportion of time that data is being transmitted becomes a smaller fraction of the entire opration.
+We are clearly getting a massive speedup over the CPU when doing this kind of operation. The CPU is already quite good at doing rowsums in C due to contiguous data access (since C is row-major), however the incredible parallelism given by CUDA cannot be beaten. As is to be expected, the speedup increases as $m,n \to 25000$, since the proportion of time that data is being transmitted becomes a smaller fraction of the entire operation.
 
-It seems that 16 is a close to optimal block size, since although it is not the fastest for $n, m = 10000$, it is consistently one of the fastest for each matrix dimension.
+It seems that anything from 16-256 could be chosen as optimal block size. There is some random variation in performance at times (perhaps due to other jobs on the machine) so I think any of these values could be called optimal. They're all pretty good!
 \pagebreak
 
 \subsection{Column Sum Speedup vs CPU}%
@@ -123,51 +124,51 @@ It seems that 16 is a close to optimal block size, since although it is not the 
  \hline
  Block size & n,m = 1000 & n,m = 5000 & n,m = 10000 & n,m = 25000 \\ [0.5ex] 
  \hline
- 4 & 1653 & 51842 & 279702 & 3697568 \\
+ 4 & 1757 & 11852 & 19568 & 65376 \\
  \hline
- 8 & 1626 & 64977 & 276609 & 3694547 \\
+ 8 & 2181 & 9368 & 3764 & 65684 \\
  \hline
- 16 & 2206 & 86626 & 280472 & 3886223 \\
+ 16 & 1610 & 11718 & 24468 & 65421 \\
  \hline
- 32 & 1651 & 64723 & 277459 & 3758644 \\
+ 32 & 1668 & 11755 & 24805 & 52240 \\
  \hline
- 64 & 1633 & 65055 & 281323 & 3772076 \\
+ 64 & 1630 & 9522 & 19810 & 65891 \\
  \hline
- 128 & 1629 & 65184 & 275030 & 3739942 \\
+ 128 & 1652 & 11825 & 24696 & 65435 \\
  \hline
- 256 & 1648 & 64428 & 275669 & 2954227 \\
+ 256 & 1652 & 11838 & 19945 & 66331 \\
  \hline
- 512 & 2182 & 51512 & 277657 & 3715496 \\
+ 512 & 1658 & 15682 & 24600 & 65529 \\
  \hline
- 256 & 1635 & 65210 & 277535 & 3033259 \\
+ 1024 & 1650 & 9444 & 24628 & 65865 \\
  \hline
  \hline
 \end{tabular}
 \end{center}
 We get an even better speedup for column sums when compared with the CPU. Not only is this due to the fact that the CPU is worse at column sums than rowsums, but also because we are able to do CUDA column sums an order of magnitude faster than CUDA rowsums (see \texttt{output/*.txt}). I'm not sure why this should be the case, if anything we would again assume that column-major C would make CUDA also slightly better at column sums than rowsums, or even almost the same if there was some fancy compiler trickery at work which made the memory access per thread more contiguous. 
 
-        Once again 16 seems like a nice block size. We will use this for part 4.
+There seems to be more spread in terms of which block sizes perform well. The smaller block sizes seem to do well with smaller matrix dimensions, whereas bigger block sizes seem to do well for bigger matrix dimensions. For balance we will choose a middle block size (somewhat arbitrarily, since there must be some noise in the data that is causing any outlier values). We will choose 128 as our optimal block size for part 4.
 \subsection{Reduction Speedup vs CPU}%
 \begin{center}
  \begin{tabular}{||c | c | c | c | c ||}
  \hline
  Block size & n,m = 1000 & n,m = 5000 & n,m = 10000 & n,m = 25000 \\ [0.5ex] 
  \hline
- 4 & 0.002 & 0.001 & 0.0005 & 0.0003 \\
+ 4 & 0.002 & 0.002 & 0.001 & 0.001 \\
  \hline
- 8 & 0.002 & 0.002 & 0.0011 & 0.0005 \\
+ 8 & 0.002 & 0.002 & 0.002 & 0.001 \\
  \hline
- 16 & 0.002 & 0.002 & 0.002 & 0.0008 \\
+ 16 & 0.001 & 0.002 & 0.002 & 0.0008 \\
  \hline
- 32 & 0.002 & 0.002 & 0.002 & 0.001 \\
+ 32 & 0.002 & 0.002 & 0.002 & 0.002 \\
  \hline
- 64 & 0.002 & 0.002 & 0.002 & 0.001 \\
+ 64 & 0.002 & 0.002 & 0.002 & 0.002 \\
  \hline
  128 & 0.002 & 0.002 & 0.002 & 0.001 \\
  \hline
- 256 & 0.002 & 0.002 & 0.002 & 0.001 \\
+ 256 & 0.002 & 0.002 & 0.002 & 0.002 \\
  \hline
- 512 & 0.002 & 0.002 & 0.002 & 0.001 \\
+ 512 & 0.001 & 0.002 & 0.002 & 0.002 \\
  \hline
  1024 & 0.001 & 0.001 & 0.001 & 0.001 \\
  \hline
@@ -179,5 +180,6 @@ If we were to get an efficient algorithm working using the shared memory and som
 
 \section{Double Precision Testing}%
 
+Using blocksize 128 we can compare the performance between single and double precision. Please see \texttt{double/output/} for data. 
 
 \end{document}
