--- a/assignments/assignment1/tex/writeup.tex
+++ b/assignments/assignment1/tex/writeup.tex
@@ -182,4 +182,18 @@ If we were to get an efficient algorithm working using the shared memory and som
 
 Using blocksize 128 we can compare the performance between single and double precision. Please see \texttt{double/output/} for data. 
 
+
+\begin{center}
+ \begin{tabular}{||c | c | c | c | c ||}
+ \hline
+ Precision & n,m = 1000 & n,m = 5000 & n,m = 10000 & n,m = 25000 \\ [0.5ex] 
+ \hline
+ Single Precision & 0.002 & 0.002 & 0.001 & 0.001 \\
+ \hline
+ Double Precision & 0.002 & 0.002 & 0.002 & 0.001 \\
+ \hline
+ \hline
+\end{tabular}
+\end{center}
+
 \end{document}
